--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,13 +7,16 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
-  },  
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
-    "nodemon": "^3.1.1"
+    "nodemon": "^3.1.1",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   }
 }
