--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
         "nodemon": "^3.1.1",
         "pg": "^8.11.5",
         "pg-hstore": "^2.3.4",
-        "sequelize": "^6.37.3"
+        "sequelize": "^6.37.3",
+        "serverless-http": "^3.2.0"
     }
 }
