--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
         "express": "^4.19.2",
         "mongoose": "^8.4.0",
         "nodemon": "^3.1.1",
+        "path": "^0.12.7",
         "pg": "^8.11.5",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.3",
