--- a/api/package.json
+++ b/api/package.json
@@ -5,12 +5,32 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "node index.js",
         "start": "nodemon index.js"
     },
     "dependencies": {
-        "express": "^4.17.1",
+        "axios": "^1.7.2",
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
+        "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
-        "pg": "^8.7.1"
+        "express": "^4.19.2",
+        "express-handlebars": "^7.1.2",
+        "express-session": "^1.18.0",
+        "express-validator": "^7.1.0",
+        "install": "^0.13.0",
+        "method-override": "^3.0.0",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "npm": "^10.8.1",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
+        "pg": "^8.11.5",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.37.3"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.2"
     }
 }
